fix z-index

--- a/src/components/rich-text-edit/adapter/vue-froala.scss
+++ b/src/components/rich-text-edit/adapter/vue-froala.scss
@@ -15,6 +15,6 @@
         /deep/ .fr-wrapper.show-placeholder .fr-placeholder { display: none; }
 
         // Allow popups to appear over modals.
-        /deep/ .fr-popup .fr-desktop .fr-active { z-index: 103; }
+        /deep/ .fr-toolbar { z-index: 200; }
     }
 }
